<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">tejaswitandel_s_application108</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="lbl_email">Email</string>
<string name="lbl_forgot_password">Forgot Password</string>
<string name="lbl_your_email">Your Email</string>
<string name="lbl_start">Start</string>
<string name="lbl_login_or_signup">Login or SignUp</string>
<string name="lbl_next">Next</string>
<string name="msg_don_t_have_an_a">Don\u2019t have an account?</string>
<string name="msg_check_your_app">"Check your app's UI from the below demo screens of your app."</string>
<string name="msg_this_is_your_co">this is your community, help them to grow more</string>
<string name="lbl_sign_up">Sign Up</string>
<string name="msg_our_community_i2">"Our community is your community too so let's strengthen our community together"</string>
<string name="lbl_adacana">Adacana</string>
<string name="lbl_password">Password</string>
<string name="msg_our_community_i">our community is ready to help you to join our best platform</string>
<string name="msg_lorem_ipsum_dol">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
<string name="msg_forgot_password">Forgot Password?</string>
<string name="msg_welcome_to_our">Welcome to our community</string>
<string name="lbl_get_in_through">Get in through</string>
<string name="lbl_signup">SignUp</string>
<string name="lbl_login">Login</string>
<string name="lbl_app_navigation">App Navigation</string>
<string name="msg_helping_others">Helping others means helping yourself.</string>
<string name="msg_if_you_are_alwa">If you are always helping others you are helping yourself too</string>
<string name="msg_this_contact_has_no_phone_nu">This contact has no phone number</string>
</resources>
