<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="loginVM" type="com.tejaswitandelsapplication.app.modules.login.data.viewmodel.LoginVM"/>
    </data>
    <LinearLayout android:gravity="start"
        android:id="@+id/linearGroup46"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarToolbar"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_19pxv"
            android:layout_width="match_parent" app:contentInsetStart="0dp">
            <LinearLayout android:id="@+id/linearAppBar"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/_36pxh"
                android:layout_marginStart="@dimen/_29pxh"
                android:layout_width="match_parent" android:orientation="horizontal">
                <ImageView android:id="@+id/imageBack"
                    android:layout_height="@dimen/_60pxh"
                    android:layout_width="@dimen/_72pxh"
                    android:scaleType="fitXY" android:src="@drawable/img_back_1"/>
                <TextView android:alpha="0.8" android:ellipsize="end"
                    android:id="@+id/txtLogin"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_16pxv"
                    android:layout_marginStart="@dimen/_178pxh"
                    android:layout_marginTop="@dimen/_17pxv"
                    android:layout_weight="0.45"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{loginVM.loginModel.txtLogin}"
                    style="@style/txtPoppinssemibold18" tools:text="@string/lbl_login"/>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
        <ScrollView android:clipToPadding="false"
            android:fillViewport="true"
            android:id="@+id/scrollViewScrollview"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/_56pxv"
            android:layout_marginTop="@dimen/_24pxv"
            android:layout_weight="1" android:layout_width="match_parent">
            <LinearLayout android:gravity="start"
                android:id="@+id/linearGroup44"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" android:orientation="vertical">
                <TextView android:alpha="0.8"
                    android:id="@+id/txtThisIsYourCo"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_32pxh"
                    android:layout_marginStart="@dimen/_32pxh"
                    android:layout_width="match_parent"
                    android:text="@{loginVM.loginModel.txtThisIsYourCo}"
                    style="@style/txtPoppinsbold34" tools:text="@string/msg_this_is_your_co"/>
                <TextView android:alpha="0.4"
                    android:id="@+id/txtOurCommunityI"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_32pxh"
                    android:layout_marginStart="@dimen/_32pxh"
                    android:layout_marginTop="@dimen/_12pxv"
                    android:layout_width="match_parent"
                    android:text="@{loginVM.loginModel.txtOurCommunityI}"
                    style="@style/txtPoppinsmedium12" tools:text="@string/msg_our_community_i2"/>
                <ImageView android:id="@+id/imageLogo"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="@dimen/_113pxh"
                    android:layout_marginEnd="@dimen/_32pxh"
                    android:layout_marginStart="@dimen/_32pxh"
                    android:layout_marginTop="@dimen/_21pxv"
                    android:layout_width="@dimen/_116pxh"
                    android:scaleType="fitXY" android:src="@drawable/img_logo_2"/>
                <EditText
                    android:background="@drawable/rectangle_border_gray_900_63_radius_14"
                    android:ellipsize="end"
                    android:hint="@string/lbl_email"
                    android:id="@+id/etEmail"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_32pxh"
                    android:layout_marginStart="@dimen/_32pxh"
                    android:layout_marginTop="@dimen/_115pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_20pxv"
                    android:paddingStart="@dimen/_24pxh"
                    android:paddingTop="@dimen/_21pxv"
                    android:singleLine="true"
                    android:text="@={loginVM.loginModel.etEmailValue}"
                    android:textColorHint="@color/gray_900_7e" style="@style/etRoundedOutline"/>
                <EditText
                    android:background="@drawable/rectangle_border_gray_900_63_radius_14"
                    android:ellipsize="end"
                    android:hint="@string/lbl_password"
                    android:id="@+id/etPassword"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_32pxh"
                    android:layout_marginStart="@dimen/_32pxh"
                    android:layout_marginTop="@dimen/_24pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_20pxv"
                    android:paddingStart="@dimen/_24pxh"
                    android:paddingTop="@dimen/_21pxv"
                    android:singleLine="true"
                    android:text="@={loginVM.loginModel.etPasswordValue}"
                    android:textColorHint="@color/gray_900_7e" style="@style/etRoundedOutline"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtForgotPassword"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_34pxh"
                    android:layout_marginStart="@dimen/_34pxh"
                    android:layout_marginTop="@dimen/_24pxv"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@{loginVM.loginModel.txtForgotPassword}"
                    style="@style/txtPoppinssemibold12" tools:text="@string/msg_forgot_password"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:ellipsize="end" android:gravity="center"
                    android:id="@+id/btnNext"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_32pxh"
                    android:layout_marginStart="@dimen/_32pxh"
                    android:layout_marginTop="@dimen/_33pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_19pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_30pxh"
                    android:paddingTop="@dimen/_20pxv"
                    android:singleLine="true"
                    android:text="@string/lbl_next"
                    android:textAllCaps="false"
                    style="@style/btnSolidRounded" tools:text="@string/lbl_next"/>
                <LinearLayout android:gravity="center_vertical"
                    android:id="@+id/linearDonthaveana"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_32pxh"
                    android:layout_marginStart="@dimen/_32pxh"
                    android:layout_marginTop="@dimen/_24pxv"
                    android:layout_width="wrap_content" android:orientation="horizontal">
                    <TextView android:alpha="0.4"
                        android:ellipsize="end"
                        android:id="@+id/txtDontHaveAnA"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.77"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text="@{loginVM.loginModel.txtDontHaveAnA}"
                        style="@style/txtPoppinsmedium12" tools:text="@string/msg_don_t_have_an_a"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtSignUp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8pxh"
                        android:layout_weight="0.23"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text="@{loginVM.loginModel.txtSignUp}"
                        style="@style/txtPoppinssemibold12" tools:text="@string/lbl_signup"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>
