<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="forgotPasswordVM" type="com.tejaswitandelsapplication.app.modules.forgotpassword.data.viewmodel.ForgotPasswordVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearForgotPassword"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <androidx.appcompat.widget.Toolbar android:gravity="start"
            android:id="@+id/toolbarToolbar"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_27pxv"
            android:layout_width="match_parent" app:contentInsetStart="0dp">
            <LinearLayout android:id="@+id/linearAppBar"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/_32pxh"
                android:layout_marginStart="@dimen/_19pxh"
                android:layout_width="match_parent" android:orientation="horizontal">
                <ImageView android:id="@+id/imageBack"
                    android:layout_height="@dimen/_60pxh"
                    android:layout_width="@dimen/_67pxh"
                    android:scaleType="fitXY" android:src="@drawable/img_back_2"/>
                <TextView android:alpha="0.8" android:ellipsize="end"
                    android:id="@+id/txtPersonality"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_18pxv"
                    android:layout_marginStart="@dimen/_101pxh"
                    android:layout_marginTop="@dimen/_15pxv"
                    android:layout_weight="0.7"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{forgotPasswordVM.forgotPasswordModel.txtPersonality}"
                    style="@style/txtPoppinssemibold18" tools:text="@string/lbl_forgot_password"/>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
        <TextView android:alpha="0.8" android:gravity="start"
            android:id="@+id/txtLanguage"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_32pxh"
            android:layout_marginStart="@dimen/_32pxh"
            android:layout_marginTop="@dimen/_25pxv"
            android:layout_width="match_parent"
            android:text="@{forgotPasswordVM.forgotPasswordModel.txtLanguage}"
            style="@style/txtPoppinsbold34" tools:text="@string/msg_helping_others"/>
        <TextView android:alpha="0.4" android:gravity="start"
            android:id="@+id/txtIfyouarealwa"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_32pxh"
            android:layout_marginStart="@dimen/_32pxh"
            android:layout_marginTop="@dimen/_7pxv"
            android:layout_width="match_parent"
            android:text="@{forgotPasswordVM.forgotPasswordModel.txtIfyouarealwa}"
            style="@style/txtPoppinsmedium12" tools:text="@string/msg_if_you_are_alwa"/>
        <ImageView android:id="@+id/imageLogo"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_121pxh"
            android:layout_marginEnd="@dimen/_32pxh"
            android:layout_marginStart="@dimen/_32pxh"
            android:layout_marginTop="@dimen/_37pxv"
            android:layout_width="@dimen/_135pxh"
            android:scaleType="fitXY" android:src="@drawable/img_logo_3"/>
        <TextView android:alpha="0.8" android:ellipsize="end"
            android:gravity="center_horizontal"
            android:id="@+id/txtForgotPassword"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_32pxh"
            android:layout_marginStart="@dimen/_32pxh"
            android:layout_marginTop="@dimen/_25pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@{forgotPasswordVM.forgotPasswordModel.txtForgotPassword}"
            style="@style/txtPoppinssemibold18" tools:text="@string/lbl_forgot_password"/>
        <EditText
            android:background="@drawable/rectangle_border_gray_900_63_radius_10"
            android:ellipsize="end"
            android:hint="@string/lbl_your_email"
            android:id="@+id/etYourEmail"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_32pxh"
            android:layout_marginStart="@dimen/_32pxh"
            android:layout_marginTop="@dimen/_48pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_20pxv"
            android:paddingStart="@dimen/_24pxh"
            android:paddingTop="@dimen/_21pxv" android:singleLine="true"
            android:text="@={forgotPasswordVM.forgotPasswordModel.etYourEmailValue}"
            android:textColorHint="@color/gray_900_7e" style="@style/etRoundedOutline_1"/>
        <TextView android:alpha="0.4" android:gravity="start"
            android:id="@+id/txtLoremipsumdol"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_32pxh"
            android:layout_marginStart="@dimen/_32pxh"
            android:layout_marginTop="@dimen/_18pxv"
            android:layout_width="match_parent"
            android:text="@{forgotPasswordVM.forgotPasswordModel.txtLoremipsumdol}"
            style="@style/txtPoppinsregular12" tools:text="@string/msg_lorem_ipsum_dol"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnStart"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_32pxh"
            android:layout_marginStart="@dimen/_32pxh"
            android:layout_marginTop="@dimen/_18pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_19pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_20pxv" android:singleLine="true"
            android:text="@string/lbl_start" android:textAllCaps="false"
            style="@style/btnSolidRounded" tools:text="@string/lbl_start"/>
    </LinearLayout>
</layout>
