<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="appNavigationVM" type="com.tejaswitandelsapplication.app.modules.appnavigation.data.viewmodel.AppNavigationVM"/>
    </data>
    <LinearLayout android:id="@+id/linearGroupAP13"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <LinearLayout android:id="@+id/linearAppNavigation"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylewhite_A700">
            <TextView android:ellipsize="end" android:gravity="start"
                android:id="@+id/txtAppNavigation"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10pxv"
                android:layout_marginEnd="@dimen/_20pxh"
                android:layout_marginStart="@dimen/_20pxh"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@{appNavigationVM.appNavigationModel.txtAppNavigation}"
                style="@style/txtregular20" tools:text="@string/lbl_app_navigation"/>
            <TextView android:ellipsize="end" android:gravity="start"
                android:id="@+id/txtCheckYourAppsUIFromTheBelowDemoScreensOfYourApp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20pxh"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@{appNavigationVM.appNavigationModel.txtCheckYourAppsUIFromTheBelowDemoScreensOfYourApp}"
                style="@style/txtregular16" tools:text="@string/msg_check_your_app"/>
            <View android:background="@color/black_900"
                android:id="@+id/lineLine2"
                android:layout_gravity="center_horizontal"
                android:layout_height="@dimen/_1pxv"
                android:layout_marginTop="@dimen/_5pxv" android:layout_width="@dimen/_375pxh"/>
        </LinearLayout>
        <ScrollView android:clipToPadding="false"
            android:fillViewport="true"
            android:gravity="center_horizontal"
            android:id="@+id/scrollViewGroupAP12"
            android:layout_height="match_parent"
            android:layout_weight="1" android:layout_width="match_parent">
            <LinearLayout android:id="@+id/linearGroupAP11"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStylewhite_A700">
                <LinearLayout android:clickable="true"
                    android:id="@+id/linearAdacana"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="vertical" style="@style/groupStylewhite_A700">
                    <TextView android:ellipsize="end"
                        android:gravity="start"
                        android:id="@+id/txtAdacana"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_10pxv"
                        android:layout_marginEnd="@dimen/_20pxh"
                        android:layout_marginStart="@dimen/_20pxh"
                        android:layout_marginTop="@dimen/_10pxv"
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        android:text="@{appNavigationVM.appNavigationModel.txtAdacana}"
                        style="@style/txtregular20" tools:text="@string/lbl_adacana"/>
                    <View android:background="@color/bluegray_400"
                        android:id="@+id/lineLine3"
                        android:layout_gravity="center_horizontal"
                        android:layout_height="@dimen/_1pxv"
                        android:layout_marginTop="@dimen/_5pxv" android:layout_width="@dimen/_375pxh"/>
                </LinearLayout>
                <LinearLayout android:clickable="true"
                    android:id="@+id/linearLoginOrSignUp"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="vertical" style="@style/groupStylewhite_A700">
                    <TextView android:ellipsize="end"
                        android:gravity="start"
                        android:id="@+id/txtLoginOrSignUp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_10pxv"
                        android:layout_marginEnd="@dimen/_20pxh"
                        android:layout_marginStart="@dimen/_20pxh"
                        android:layout_marginTop="@dimen/_10pxv"
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        android:text="@{appNavigationVM.appNavigationModel.txtLoginOrSignUp}"
                        style="@style/txtregular20" tools:text="@string/lbl_login_or_signup"/>
                    <View android:background="@color/bluegray_400"
                        android:id="@+id/lineLine4"
                        android:layout_gravity="center_horizontal"
                        android:layout_height="@dimen/_1pxv"
                        android:layout_marginTop="@dimen/_5pxv" android:layout_width="@dimen/_375pxh"/>
                </LinearLayout>
                <LinearLayout android:clickable="true"
                    android:id="@+id/linearLogin"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="vertical" style="@style/groupStylewhite_A700">
                    <TextView android:ellipsize="end"
                        android:gravity="start"
                        android:id="@+id/txtLogin"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_10pxv"
                        android:layout_marginEnd="@dimen/_20pxh"
                        android:layout_marginStart="@dimen/_20pxh"
                        android:layout_marginTop="@dimen/_10pxv"
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        android:text="@{appNavigationVM.appNavigationModel.txtLogin}"
                        style="@style/txtregular20" tools:text="@string/lbl_login"/>
                    <View android:background="@color/bluegray_400"
                        android:id="@+id/lineLine5"
                        android:layout_gravity="center_horizontal"
                        android:layout_height="@dimen/_1pxv"
                        android:layout_marginTop="@dimen/_5pxv" android:layout_width="@dimen/_375pxh"/>
                </LinearLayout>
                <LinearLayout android:clickable="true"
                    android:id="@+id/linearForgotPassword"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="vertical" style="@style/groupStylewhite_A700">
                    <TextView android:ellipsize="end"
                        android:gravity="start"
                        android:id="@+id/txtForgotPassword"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_10pxv"
                        android:layout_marginEnd="@dimen/_20pxh"
                        android:layout_marginStart="@dimen/_20pxh"
                        android:layout_marginTop="@dimen/_10pxv"
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        android:text="@{appNavigationVM.appNavigationModel.txtForgotPassword}"
                        style="@style/txtregular20" tools:text="@string/lbl_forgot_password"/>
                    <View android:background="@color/bluegray_400"
                        android:id="@+id/lineLine6"
                        android:layout_gravity="center_horizontal"
                        android:layout_height="@dimen/_1pxv"
                        android:layout_marginTop="@dimen/_5pxv" android:layout_width="@dimen/_375pxh"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>
